# basket-ball-final

./: .gitignore  basketball-api.service  index.html  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
output_videos/video_1/: progress.json
output_videos/video_2/: progress.json
pages/: VideoUpload.jsx
src/: App.jsx  api.js  index.css
src/components/: BackendStatus.jsx
